# mattjames

./: .env.example  .gitignore  EXECUTION_CHECKLIST.md  FOUNDERS_CONSOLE_AND_CLIENT_PORTAL_SPEC.md  PLATFORM_NATIVE_CONTAINER_ARCHITECTURE.md  README.md  UI_UX_EXCELLENCE_SPEC.md  V1_OPERATING_FLOW.md  pyproject.toml  railway.json  requirements.txt
api/: config.py  db.py  main.py  observability.py  pagination.py  security.py  tenant_security.py
api/models/: common.py  platform.py
api/routes/: admin.py  approval_decisions.py  apps.py  client_environments.py  client_portal.py  client_portal_page.py  demo.py  dependencies.py  founder_console.py  idempotency.py  intake_requests.py  metering_controls.py  orgs.py  preview_builds.py  projects.py  releases.py  scope.py  workflow.py
api/services/platform/: __init__.py  repository.py  workflow.py
deploy/sql/: multi_tenant_v1.sql
scripts/: check_db_schema.py
tests/: conftest.py  test_admin_endpoints.py  test_approval_decisions.py  test_auth.py  test_client_environments.py  test_client_portal.py  test_demo_bootstrap.py  test_demo_journey.py  test_founder_console.py  test_health_endpoints.py  test_intake_requests.py  test_metering_controls.py  test_observability.py  test_org_members.py  test_pagination_filters_idempotency.py  test_platform_crud.py  test_preview_builds.py  test_releases.py  test_tenant_role_write.py  test_tenant_scope.py  test_workflow.py
